Update note: methods of compile or run in command line