@@ -6,6 +6,17 @@
 + https://home.gamer.com.tw/creationDetail.php?sn=4766681
 + https://www.youtube.com/watch?v=I4J5_IWDeEo
 
++ 編譯或執行
+```
+first cd into src/ folder
+
+To Compile:
+javac --module-path "c:\\Program Files\\JavaFX\\javafx-sdk-17.0.1\\lib\\" --add-modules javafx.controls App.java
+
+To Run:
+java --module-path "c:\\Program Files\\JavaFX\\javafx-sdk-17.0.1\\lib\\" --add-modules javafx.controls App
+```
+
 ### 其他關於JavaFX的參考:
 + https://openjfx.io/
 + https://github.com/openjfx/samples/blob/master/HelloFX/CLI/hellofx/HelloFX.java
